# test

./: docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: initializer.py  main.py
app/config/: __init__.py  _base.py  _custom.py  local.yaml  local.yaml.tmpl  logging.py
app/internal/api/: __init__.py  router.py  status.py
app/internal/api/v1/: __init__.py  auth.py  router.py  schedule.py  status.py  user.py
app/internal/api/v1/schemas/request/: schedule.py  user.py
app/internal/api/v1/schemas/response/: schedule.py
app/internal/core/: auth.py  exception_handlers.py  exceptions.py  requests.py  utils.py
app/internal/core/logs/: adapters.py  filters.py  helpers.py  log_record_factory.py
app/internal/core/middlewares/: __init__.py  header.py  logging.py
app/internal/core/settings/: validators.py
app/internal/core/settings/loaders/: local.py  yaml.py
app/internal/core/types/: __init__.py  enums.py  lesson.py
app/internal/dependencies/: auth.py  schedule.py  user.py
app/internal/dto/: schedule.py  user.py
app/internal/repositories/: eos_schedule.py  redis.py
app/internal/repositories/db/: base.py  helpers.py  schedule.py  user.py
app/internal/repositories/db/migrations/default/: 0_20231211165418_init.py  1_20231213191918_update.py  2_20231219152705_update.py  3_20240122013314_update.py  4_20241122013314_update.py
app/internal/repositories/db/models/: __init__.py  schedule.py  user.py
app/internal/services/: auth.py  schedule.py  user.py
app/tests/unit/: __init__.py  patch_config.py  test_loaders.py
app/tests/unit/test_api/: conftest.py  test_auth.py  test_large_request.py  test_ping.py  test_schedule.py
app/tests/unit/test_repositories/: conftest.py  test_eos_schedule.py
app/tests/unit/test_utils/: conftest.py  test_access_log.py  test_error_handler.py  test_load_yaml.py  test_log.py  test_requests_log.py  test_write.py
deploy/docker/: api.Dockerfile  docker-compose.yaml  scheduler.Dockerfile
docs/: create_admin.md  deploy.md  index.md  linters.md  migrate.md  poetry.md
scripts/: manage.py
